@@ -1,3 +1,5 @@
 DIST kadu-0.6.0.1.tar.bz2 1566609 RMD160 06709d16dd84a10c917fb12ee3dd06eb4ef18879 SHA1 727c5b25b7178f8d947497182da6817c170b7d6a SHA256 5b022f3043b112bbba6115bdf2877ff01d6b3b1342d74db5977fa92b1662d68c
+DIST kadu-0.6.0.2.tar.bz2 1568547 RMD160 2e8952831cada064c1caa65b943b6e44880b39c3 SHA1 efbae7840078eab46c5ac20d6e7397cf1c1457bd SHA256 8e06b554761e39890e48ba723145d4e1e0919cc84fcd978f215a6e2a30f87bfa
 EBUILD kadu-window_notify-0.6.0.1.ebuild 266 RMD160 299d5b9c781fda6131ba475527b6e58b7150cee7 SHA1 60f51efe8f701adc67b5c4471ba3c36c8fddb09c SHA256 a3d00073d05717b26863e252a0c25d9ea3598fa29b615459228f729e82577198
-MISC ChangeLog 327 RMD160 93c8c84e7904dad8465fffbbc3423b1bbf249603 SHA1 49159fd49550cf4b3fe07061d4e376f89c7d251f SHA256 f78241957a3831b18a92b27a809a0dbdf41021b23296db332b59aa8bd055e8c3
+EBUILD kadu-window_notify-0.6.0.2.ebuild 266 RMD160 299d5b9c781fda6131ba475527b6e58b7150cee7 SHA1 60f51efe8f701adc67b5c4471ba3c36c8fddb09c SHA256 a3d00073d05717b26863e252a0c25d9ea3598fa29b615459228f729e82577198
+MISC ChangeLog 425 RMD160 622f4074cd762f4badb3f217fb797b7cfafd4cf4 SHA1 2602794eb2a99851487051cda825e742c2a1d6f5 SHA256 3626923bbd3406a8d892abef2e6bbce9307dbd2ce4f561c8d7c75b2d7b2b2407
